Added clear sceens for os